sso/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: sso
  labels:
    app.kubernetes.io/name: keycloak
spec:
  serviceName: keycloak-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.2
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
            - name: http-management
              containerPort: 9000
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
          startupProbe:
            httpGet:
              path: /health/started
              port: http-management
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http-management
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /health/live
              port: http-management
            periodSeconds: 10
            failureThreshold: 12
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
