sso/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sso
  labels:
    app.kubernetes.io/name: keycloak-service
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
    - protocol: TCP
      port: 9000
      targetPort: http-management
      name: http-management
  type: ClusterIP
